--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>бебебе</title>
+    <title>Мультимедийный Лендинг</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,40 +12,56 @@
 
     <header class="header">
         <div class="container">
-            <h1>бебебе</h1>
-            <p>Ваше решение для эффективных и быстрых результатов</p>
-            <button class="cta-button" onclick="playClickSound(); scrollToForm()">Начать</button>
+            <h1 class="main-title">Добро пожаловать в наш мир возможностей</h1>
+            <p>Мы предлагаем уникальные решения для ваших задач.</p>
+            <button class="cta-button" onclick="playClickSound(); scrollToSection('features')">Узнать больше</button>
         </div>
     </header>
 
-    <section class="features">
+    <section class="features" id="features">
         <div class="container">
-            <h2>Почему выбирают нас?</h2>
+            <h2 class="section-title">Что мы предлагаем</h2>
             <div class="feature-list">
                 <div class="feature-item">
-                    <h3>Быстрая доставка</h3>
-                    <p>Получите результаты в кратчайшие сроки с нашими оптимизированными услугами.</p>
+                    <h3>Индивидуальные решения</h3>
+                    <p>Наша команда разрабатывает решения, подходящие именно вам.</p>
+                    <a href="#contact-form" class="styled-link">Оставить заявку</a>
                 </div>
                 <div class="feature-item">
-                    <h3>Надёжные эксперты</h3>
-                    <p>Работайте с профессионалами, которые знают своё дело.</p>
+                    <h3>Современные технологии</h3>
+                    <p>Мы используем только передовые инструменты и подходы.</p>
+                    <img src="technology.jpg" alt="Современные технологии" class="feature-image">
                 </div>
                 <div class="feature-item">
-                    <h3>Поддержка 24/7</h3>
-                    <p>Мы всегда рядом, чтобы помочь вам в любое время.</p>
+                    <h3>Постоянная поддержка</h3>
+                    <p>Наша служба поддержки доступна 24/7 для любых вопросов.</p>
+                    <a href="#map" class="styled-link">Найти нас на карте</a>
                 </div>
             </div>
         </div>
     </section>
 
+    <section class="interactive" id="map">
+        <div class="container">
+            <h2 class="section-title">Наша география</h2>
+            <p>Вы можете найти нас по всему миру.</p>
+            <img src="map.jpg" alt="Карта с нашими офисами" class="map-image" usemap="#office-map">
+            <map name="office-map">
+                <area shape="rect" coords="50,50,150,150" href="https://example.com/moscow" alt="Москва" title="Офис в Москве">
+                <area shape="rect" coords="200,50,300,150" href="https://example.com/spb" alt="Санкт-Петербург" title="Офис в Санкт-Петербурге">
+                <area shape="rect" coords="350,50,450,150" href="https://example.com/kazan" alt="Казань" title="Офис в Казани">
+            </map>
+        </div>
+    </section>
+
     <section class="contact-form" id="contact-form">
         <div class="container">
-            <h2>Оставьте заявку</h2>
-            <p>Заполните свои данные, чтобы начать работу.</p>
+            <h2 class="section-title">Свяжитесь с нами</h2>
             <form onsubmit="handleSubmit(event)">
                 <input type="text" id="name" placeholder="Ваше имя" required>
                 <input type="email" id="email" placeholder="Ваш email" required>
-                <button type="submit" onclick="playClickSound()">Отправить</button>
+                <textarea id="message" placeholder="Ваше сообщение" rows="4" required></textarea>
+                <button type="submit">Отправить</button>
             </form>
             <p id="form-message" class="form-message"></p>
         </div>
@@ -53,7 +69,12 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 Наш сервис. Все права защищены.</p>
+            <p>&copy; 2024 Наша компания. Все права защищены.</p>
+            <nav>
+                <a href="#features" class="footer-link">Наши услуги</a>
+                <a href="#map" class="footer-link">Карта</a>
+                <a href="#contact-form" class="footer-link">Контакты</a>
+            </nav>
         </div>
     </footer>
 
